# poc-cartesi-r0

core/: Cargo.toml
core/src/: lib.rs
host/: Cargo.toml
host/src/: main.rs
methods/: Cargo.toml
methods/guest/: Cargo.toml  build.rs
methods/guest/src/: main.rs
