[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
grpc-cartesi-machine = { path = "../../machine-manager/grpc-cartesi-machine" }
tokio = { version = "~1.12.0", features = ["macros", "rt-multi-thread","time"]}
project-core = { path = "../core" }
risc0-zkvm = { version = "0.15.2" }
serde = "1.0"
log = "0.4"
env_logger = "0.10"
futures = "0.3"
sha2 = "0.10.7"
hex = "0.4.3"
