[package]
# TODO: Rename this package to change the method name from METHOD_NAME
name = "method_name"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
# If you want to try (experimental) std support, add `features = [ "std" ]` to risc0-zkvm
risc0-zkvm = { path = "../../../risc0/risc0/zkvm", default-features = false, features = [ "std"] }
project-core = { path = "../../core" }

[build-dependencies]
cc = "1.0"